target/src/PLParser.java
// Generated from ./src/PL.g4 by ANTLR 4.13.1

import backend.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, ID=34, STRING=35, INTEGER=36, SINGLE_QUOTE=37, WHITESPACE=38;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_print = 4, RULE_forStatement = 5, RULE_functionDeclaration = 6, RULE_parameterList = 7, 
		RULE_argumentList = 8, RULE_functionInvocation = 9, RULE_ifStatement = 10, 
		RULE_expression = 11, RULE_concatenationExpr = 12, RULE_arithmeticExpr = 13, 
		RULE_symbol = 14, RULE_compare = 15, RULE_comparator = 16, RULE_openFileRead = 17, 
		RULE_openFileWrite = 18, RULE_openFileAppend = 19, RULE_readFile = 20, 
		RULE_writeFile = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "statement", "assignment", "print", "forStatement", 
			"functionDeclaration", "parameterList", "argumentList", "functionInvocation", 
			"ifStatement", "expression", "concatenationExpr", "arithmeticExpr", "symbol", 
			"compare", "comparator", "openFileRead", "openFileWrite", "openFileAppend", 
			"readFile", "writeFile"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "';'", "'='", "'print('", "')'", "'for'", "'('", 
			"'in'", "'..'", "'function'", "','", "'if'", "'else'", "'++'", "'+'", 
			"'-'", "'*'", "'/'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'with'", 
			"'open'", "'r'", "'as'", "'w'", "'a'", "'.read()'", "'.write('", null, 
			null, null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "ID", "STRING", 
			"INTEGER", "SINGLE_QUOTE", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext statement;
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<Expr> statements = new ArrayList<Expr>();
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				((ProgramContext)_localctx).statement = statement();
				statements.add(((ProgramContext)_localctx).statement.expr);
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17246988448L) != 0) );
			setState(52);
			match(EOF);
			((ProgramContext)_localctx).expr =  new Block(statements);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<Expr> codeBlock = new ArrayList<Expr>();
			setState(56);
			match(T__0);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17246988448L) != 0)) {
				{
				{
				setState(57);
				((BlockContext)_localctx).statement = statement();
				 codeBlock.add(((BlockContext)_localctx).statement.expr); 
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(T__1);
			 ((BlockContext)_localctx).expr =  new Block(codeBlock); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr expr;
		public AssignmentContext assignment;
		public PrintContext print;
		public ForStatementContext forStatement;
		public FunctionDeclarationContext functionDeclaration;
		public FunctionInvocationContext functionInvocation;
		public IfStatementContext ifStatement;
		public OpenFileReadContext openFileRead;
		public OpenFileWriteContext openFileWrite;
		public OpenFileAppendContext openFileAppend;
		public WriteFileContext writeFile;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public OpenFileReadContext openFileRead() {
			return getRuleContext(OpenFileReadContext.class,0);
		}
		public OpenFileWriteContext openFileWrite() {
			return getRuleContext(OpenFileWriteContext.class,0);
		}
		public OpenFileAppendContext openFileAppend() {
			return getRuleContext(OpenFileAppendContext.class,0);
		}
		public WriteFileContext writeFile() {
			return getRuleContext(WriteFileContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				((StatementContext)_localctx).assignment = assignment();
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(69);
					match(T__2);
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).assignment.expr; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				((StatementContext)_localctx).print = print();
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(78);
					match(T__2);
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).print.expr; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				((StatementContext)_localctx).forStatement = forStatement();
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(87);
					match(T__2);
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).forStatement.expr; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				((StatementContext)_localctx).functionDeclaration = functionDeclaration();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(96);
					match(T__2);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).functionDeclaration.expr; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				((StatementContext)_localctx).functionInvocation = functionInvocation();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(105);
					match(T__2);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).functionInvocation.expr; 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				((StatementContext)_localctx).ifStatement = ifStatement();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(114);
					match(T__2);
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).ifStatement.expr; 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				((StatementContext)_localctx).openFileRead = openFileRead();
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(123);
					match(T__2);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).openFileRead.expr; 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(131);
				((StatementContext)_localctx).openFileWrite = openFileWrite();
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(132);
					match(T__2);
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).openFileWrite.expr; 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(140);
				((StatementContext)_localctx).openFileAppend = openFileAppend();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(141);
					match(T__2);
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).openFileAppend.expr; 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(149);
				((StatementContext)_localctx).writeFile = writeFile();
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(150);
					match(T__2);
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).writeFile.expr; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Expr expr;
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			((AssignmentContext)_localctx).ID = match(ID);
			setState(161);
			match(T__3);
			setState(162);
			((AssignmentContext)_localctx).expression = expression();
			 ((AssignmentContext)_localctx).expr =  new Assign((((AssignmentContext)_localctx).ID!=null?((AssignmentContext)_localctx).ID.getText():null), ((AssignmentContext)_localctx).expression.expr); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public Expr expr;
		public ExpressionContext expression;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__4);
			setState(166);
			((PrintContext)_localctx).expression = expression();
			setState(167);
			match(T__5);
			 
			        Expr expr2 = ((PrintContext)_localctx).expression.expr;
			        if (expr2 instanceof VariableExpr) {
			           expr2 = new Deref((((PrintContext)_localctx).expression!=null?_input.getText(((PrintContext)_localctx).expression.start,((PrintContext)_localctx).expression.stop):null));
			        }
			        ((PrintContext)_localctx).expr =  new PrintExpr(expr2); 
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ParserRuleContext {
		public Expr expr;
		public Token ID;
		public Token lhs;
		public Token rhs;
		public BlockContext block;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> INTEGER() { return getTokens(PLParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(PLParser.INTEGER, i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(T__6);
			setState(171);
			match(T__7);
			setState(172);
			((ForStatementContext)_localctx).ID = match(ID);
			setState(173);
			match(T__8);
			setState(174);
			((ForStatementContext)_localctx).lhs = match(INTEGER);
			setState(175);
			match(T__9);
			setState(176);
			((ForStatementContext)_localctx).rhs = match(INTEGER);
			setState(177);
			match(T__5);
			setState(178);
			((ForStatementContext)_localctx).block = block();

			        ((ForStatementContext)_localctx).expr =  new ForLoop(new VariableExpr((((ForStatementContext)_localctx).ID!=null?((ForStatementContext)_localctx).ID.getText():null)), new IntLiteral((((ForStatementContext)_localctx).lhs!=null?((ForStatementContext)_localctx).lhs.getText():null)), new IntLiteral((((ForStatementContext)_localctx).rhs!=null?((ForStatementContext)_localctx).rhs.getText():null)), ((ForStatementContext)_localctx).block.expr);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public Expr expr;
		public Token name;
		public ParameterListContext params;
		public BlockContext block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__10);
			setState(182);
			((FunctionDeclarationContext)_localctx).name = match(ID);
			setState(183);
			match(T__7);
			setState(184);
			((FunctionDeclarationContext)_localctx).params = parameterList();
			setState(185);
			match(T__5);
			setState(186);
			((FunctionDeclarationContext)_localctx).block = block();

			          ((FunctionDeclarationContext)_localctx).expr =  new Declare((((FunctionDeclarationContext)_localctx).name!=null?((FunctionDeclarationContext)_localctx).name.getText():null), ((FunctionDeclarationContext)_localctx).params.list, ((FunctionDeclarationContext)_localctx).block.expr);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<String> list;
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(PLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PLParser.ID, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(189);
				((ParameterListContext)_localctx).ID = match(ID);
				 ((ParameterListContext)_localctx).list =  new ArrayList<String>(); _localctx.list.add((((ParameterListContext)_localctx).ID!=null?((ParameterListContext)_localctx).ID.getText():null)); 
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(191);
					match(T__11);
					setState(192);
					((ParameterListContext)_localctx).ID = match(ID);
					 _localctx.list.add((((ParameterListContext)_localctx).ID!=null?((ParameterListContext)_localctx).ID.getText():null)); 
					}
					}
					setState(198);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentListContext extends ParserRuleContext {
		public List<Expr> list;
		public ExpressionContext expression;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_argumentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120259084544L) != 0)) {
				{
				setState(201);
				((ArgumentListContext)_localctx).expression = expression();
				 ((ArgumentListContext)_localctx).list =  new ArrayList<Expr>(); _localctx.list.add(((ArgumentListContext)_localctx).expression.expr); 
				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(203);
					match(T__11);
					setState(204);
					((ArgumentListContext)_localctx).expression = expression();
					 _localctx.list.add(((ArgumentListContext)_localctx).expression.expr); 
					}
					}
					setState(211);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionInvocationContext extends ParserRuleContext {
		public Expr expr;
		public Token name;
		public ArgumentListContext args;
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public FunctionInvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionInvocation; }
	}

	public final FunctionInvocationContext functionInvocation() throws RecognitionException {
		FunctionInvocationContext _localctx = new FunctionInvocationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionInvocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			((FunctionInvocationContext)_localctx).name = match(ID);
			setState(215);
			match(T__7);
			setState(216);
			((FunctionInvocationContext)_localctx).args = argumentList();
			setState(217);
			match(T__5);

			          ((FunctionInvocationContext)_localctx).expr =  new Invoke((((FunctionInvocationContext)_localctx).name!=null?((FunctionInvocationContext)_localctx).name.getText():null), ((FunctionInvocationContext)_localctx).args.list);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public Expr expr;
		public CompareContext condition;
		public BlockContext thenBlock;
		public BlockContext elseBlock;
		public CompareContext compare() {
			return getRuleContext(CompareContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}
